styles.css
body {
  background-color: rgb(14, 18, 18);
}

.main-container {
  max-width: 800px;
  height: 100%;
  margin: 0 auto;
  border: 1px solid black;
}

main {
  background-color: lightblue;
}

.lead {
  font-size: 6rem;
  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
  height: 200px;
  letter-spacing: 2px;
  color: azure;
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url("./images/else/poke_bkg.png");
  background-color: blue;
  margin-bottom: 0;
}

.lead span {
  font-size: 1.5rem;
  padding-left: 5px;
}

.text-end {
  padding: 1rem 2vw;
  font-size: 10px;
  background-color: white;

  figcaption {
    margin-bottom: 0;
  }
}

.blockquote {
  font-size: 12px;
}

.container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: repeat(6, 200px);
  padding: 50px 5px;
}

.timeline {
  position: absolute;
  background-color: black;
  width: 10px;
  height: 1770px;
  margin-left: 27.7%;
}

.card {
  max-width: fit-content;
  margin-left: auto;
  margin-right: auto;
}

.card-wrapper:nth-child(1) {
  grid-column: 1;
}

.card-wrapper:nth-child(2) {
  grid-column: 2;
  grid-row: 2;
}

.card-wrapper:nth-child(3) {
  grid-column: 1;
  grid-row: 3;
}

.card-wrapper:nth-child(4) {
  grid-column: 2;
  grid-row: 4;
}

.card-wrapper:nth-child(5) {
  grid-column: 1;
  grid-row: 5;
}

.card-wrapper:nth-child(6) {
  grid-column: 2;
  grid-row: 6;
}

.card-wrapper:nth-child(7) {
  grid-column: 1;
  grid-row: 7;
}

.card-wrapper:nth-child(8) {
  grid-column: 2;
  grid-row: 8;
}

.card-wrapper:nth-child(9) {
  grid-column: 1;
  grid-row: 9;
  padding-bottom: 10px;
}

.card-text {
  font-size: 12px;
  text-align: center;
}

.card img {
  object-fit: contain;
  padding-top: 10px;
}

.card-wrapper:nth-child(odd)::before {
  content: "";
  position: absolute;
  margin-top: 50px;
  left: calc(50vw - 10px);
  width: 30px;
  height: 30px;
  border-radius: 100%;
  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Pok%C3%A9_Ball_icon.svg/770px-Pok%C3%A9_Ball_icon.svg.png");
  background-size: contain;
  transform: rotate(20deg);
}

.card-wrapper:nth-child(even)::before {
  content: "";
  position: absolute;
  margin-top: 50px;
  left: calc(50vw - 10px);
  width: 30px;
  height: 30px;
  border-radius: 100%;
  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Pok%C3%A9_Ball_icon.svg/770px-Pok%C3%A9_Ball_icon.svg.png");
  background-size: contain;
  transform: rotate(-20deg);
}

.left::before {
  content: " ";
  height: 0;
  position: absolute;
  top: 54px;
  width: 0;
  z-index: 1;
  right: -10px;
  border: medium solid white;
  border-width: 10px 0 10px 10px;
  border-color: transparent transparent transparent red;
}

.right::before {
  content: " ";
  height: 0;
  position: absolute;
  top: 54px;
  width: 0;
  z-index: 1;
  left: -10px;
  border: medium solid white;
  border-width: 10px 10px 10px 0;
  border-color: transparent red transparent transparent;
}

footer {
  background-color: blueviolet;
  color: white;
  text-align: center;
  font-style: normal;
  font-size: smaller;
}

footer p {
  padding: 5px;
}

@media only screen and (max-width: 600px) {
  .lead {
    flex-wrap: wrap;
  }
  .blockquote {
    text-align: center;
  }
  .card {
    width: 110px;
    height: 180px;
  }

  .timeline {
    margin-left: 50%;
  }
}

